error import export

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       </section>
     </main>
     <script type="module" src="/js/main.mjs"></script>
+    <script type="module" src="./js/classes/bakery.mjs"></script>
   </body>
 </html>
